New structure was done. Update checkstyle build.gradle