@@ -5,9 +5,12 @@ import com.example.newsplatform.dto.NewsDto;
 import com.example.newsplatform.dto.NewsUpdateRequest;
 import com.example.newsplatform.entity.News;
 import com.example.newsplatform.entity.Term;
+import com.example.newsplatform.entity.User;
 import com.example.newsplatform.exception.NotFoundException;
 import com.example.newsplatform.mapper.NewsMapper;
 import com.example.newsplatform.repository.NewsRepository;
+import com.example.newsplatform.repository.TermRepository;
+import com.example.newsplatform.repository.UserRepository;
 import com.example.newsplatform.service.NewsService;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,21 +18,32 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Set;
 
 /**
  * Implementation of NewsService using JpaRepository.
+ * Handles business logic, entity mapping, and data integrity.
+ *
+ * Manages relationships:
+ * - News ↔ User (author)
+ * - News ↔ Term (categories)
  */
 @Service
 @Transactional
 public class NewsServiceImpl implements NewsService {
 
     private final NewsRepository newsRepository;
+    private final TermRepository termRepository;
+    private final UserRepository userRepository;
 
     @Autowired
-    public NewsServiceImpl(NewsRepository newsRepository) {
+    public NewsServiceImpl(NewsRepository newsRepository,
+                           TermRepository termRepository,
+                           UserRepository userRepository) {
         this.newsRepository = newsRepository;
+        this.termRepository = termRepository;
+        this.userRepository = userRepository;
     }
 
     @Override
@@ -55,11 +69,20 @@ public class NewsServiceImpl implements NewsService {
     public NewsDto create(NewsCreateRequest request) {
         News news = NewsMapper.fromCreateRequest(request);
 
-        // Category handling (simple case: single category string → Term placeholder)
-        if (request.getCategory() != null) {
-            Term term = new Term();
-            term.setName(request.getCategory());
-            news.setTerms(new HashSet<>(Collections.singleton(term)));
+        // Set author
+        if (request.getAuthorId() != null) {
+            User author = userRepository.findById(request.getAuthorId())
+                    .orElseThrow(() -> new NotFoundException("User not found with id: " + request.getAuthorId()));
+            news.setAuthor(author);
+        }
+
+        // Set category
+        if (request.getCategoryId() != null) {
+            Term term = termRepository.findById(request.getCategoryId())
+                    .orElseThrow(() -> new NotFoundException("Category not found with id: " + request.getCategoryId()));
+            news.setTerms(new HashSet<>(Set.of(term)));
+        } else {
+            news.setTerms(new HashSet<>());
         }
 
         News saved = newsRepository.save(news);
@@ -73,10 +96,18 @@ public class NewsServiceImpl implements NewsService {
 
         NewsMapper.updateEntity(existing, request);
 
-        if (request.getCategory() != null) {
-            Term term = new Term();
-            term.setName(request.getCategory());
-            existing.setTerms(new HashSet<>(Collections.singleton(term)));
+        // Update author
+        if (request.getAuthorId() != null) {
+            User author = userRepository.findById(request.getAuthorId())
+                    .orElseThrow(() -> new NotFoundException("User not found with id: " + request.getAuthorId()));
+            existing.setAuthor(author);
+        }
+
+        // Update category
+        if (request.getCategoryId() != null) {
+            Term term = termRepository.findById(request.getCategoryId())
+                    .orElseThrow(() -> new NotFoundException("Category not found with id: " + request.getCategoryId()));
+            existing.setTerms(new HashSet<>(Set.of(term)));
         }
 
         News updated = newsRepository.save(existing);
